[BlinkGenPropertyTrees] Add layer state for viewport scrollbars

This patch fixes viewport scrollbars flashing page issue. The issue
is causing by it has incorrect effect node. In this patch, we create
the effect and correct the position for viewport scrollbars.

Bug: 870520
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I954d6cddb36d811f693b597644b65ee175137dcf
Reviewed-on: https://chromium-review.googlesource.com/1172919
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583323}
Former-commit-id: 3ba286764b0719fab0b58fc33805e60d7b77ddb3